Thêm sản phẩm admin

--- a/HoangLong/gioithieu/gioithieu.html
+++ b/HoangLong/gioithieu/gioithieu.html
@@ -19,7 +19,7 @@
 
             <div id="menu">
                 <div class="item">
-                    <a href="../index.html">Trang chủ</a>
+                    <a href="../index.php">Trang chủ</a>
                 </div>
                 <div class="item">
                     <a href="#">Giới thiệu</a>
@@ -54,6 +54,13 @@
                         ĐĂNG KÝ
 
                    </button>
+                </div>
+
+                <div class="item">
+                    <a href="../giohang/giohang.php">
+                        <i class='bx bxs-shopping-bag'></i>
+                    </a>
+
                 </div>
 
 
